--- a/ejemplo/templates/ejemplo/buscar.html
+++ b/ejemplo/templates/ejemplo/buscar.html
@@ -1,28 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-    
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <h1>buscar familiar por nombre</h1>
-    
-    <form action="/mi-familia/buscar" method="post">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Submit">
-    </form>
-
-    {% for familiar in lista_familiares %}
-    <ul>
-       <li> Nombre: {{familiar.nombre}}, Dirección: {{familiar.direccion}}, Pasaporte: {{familiar.numero_pasaporte}}, Nacimiento: {{familiar.fecha_nacimiento}}</li>
-    </ul>
-    {% endfor %}
-
-</body>
-
-</html>
+{% extends 'ejemplo/base.html' %}
+{%block titulo%}
+Esto es un subtitulo
+{%endblock%}
