--- a/ejemplo/templates/ejemplo/buscar.html
+++ b/ejemplo/templates/ejemplo/buscar.html
@@ -1,4 +1,19 @@
 {% extends 'ejemplo/base.html' %}
 {%block titulo%}
-Esto es un subtitulo
+Lista de familiares
+Buscar familiares
 {%endblock%}
+
+{% block contenido %}
+<form action="/mi-familia/buscar" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Submit">
+</form>
+
+  {% for familiar in lista_familiares %}
+    <ul>
+        <li> Nombre: {{familiar.nombre}}, Dirección: {{familiar.direccion}}, Pasaporte: {{familiar.numero_pasaporte}}</li>
+    </ul>
+  {% endfor %}
+{% endblock %}
