--- a/ejemplo/templates/ejemplo/buscar.html
+++ b/ejemplo/templates/ejemplo/buscar.html
@@ -13,7 +13,7 @@ Buscar familiares
 
   {% for familiar in lista_familiares %}
     <ul>
-        <li> Nombre: {{familiar.nombre}}, Dirección: {{familiar.direccion}}, Pasaporte: {{familiar.numero_pasaporte}}</li>
+        <li> Nombre: {{familiar.nombre}}, Dirección: {{familiar.direccion}}, Pasaporte: {{familiar.numero_pasaporte}}, Nacimiento: {{familiar.fecha_nacimiento}} </li>
     </ul>
   {% endfor %}
 {% endblock %}
