--- a/ejemplo/templates/ejemplo/familiares.html
+++ b/ejemplo/templates/ejemplo/familiares.html
@@ -1,15 +1,19 @@
 {% extends 'ejemplo/base.html' %}
 
 {% block contenido %}
-{% for familiar in lista_familiares %}
-<ul>
-    <li>
-        Id: {{familiar.id}} Nombre: {{familiar.nombre}}, Dirección: {{familiar.direccion}}, Pasaporte: {{familiar.numero_pasaporte}}, Nacimiento: {{familiar.fecha_nacimiento}}
-        <a href='actualizar/{{ familiar.id }}'>Actualizar</a>
-        <a href='actualizar/{{ familiar.id }}'>Borrar</a>
+Lista de Familiares
+{%endblock %}
+{% block contenido %}
+     <a href="/mi-familia/alta">Nuevo familiar</a>
+    <ul>
+    {% for familiar in lista_familiares %} 
+        <li>
+            Id: {{familiar.id}} Nombre: {{familiar.nombre}}, Dirección: {{familiar.direccion}}, Pasaporte: {{familiar.numero_pasaporte}}, Nacimiento: {{familiar.fecha_nacimiento}}
+            <a href='/mi-familia/actualizar/{{ familiar.id }}'>Actualizar</a>
+            <a href='/mi-familia/borrar/{{ familiar.id }}'>Borrar</a>
     </li>
-</ul>
-{% endfor %}
+    {% endfor %}
+    </ul> 
 {%endblock %}
 
 {% block titulo%}
