se ajusta error en borrar familiar

--- a/ejemplo/templates/ejemplo/alta_familiar.html
+++ b/ejemplo/templates/ejemplo/alta_familiar.html
@@ -10,6 +10,6 @@
 
 <h2 style="color:green">{{msg_exito}}</h2>
 
-<a href="/mi_familia">Volver a la lista de familia</a>
+<a href="/mi-familia">Volver a la lista de familia</a>
 
 {% endblock %}
