modifico templates de automoviles y mascotas

--- a/ejemplo/templates/ejemplo/actualizar_automovil.html
+++ b/ejemplo/templates/ejemplo/actualizar_automovil.html
@@ -1,9 +1,9 @@
-{% extends 'ejemplo/base.html' %}
+{% extends 'ejemplo/base_automovil.html' %}
 {% block titulo%} Modificar un automovil {% endblock %}
 {% block contenido %}
 
 <!-- Prestar aatención a la variable automovil.id -->
-<form action="/panel-automovil/actualizar/{{ automovil.id }}" method="post"> 
+<form action="/mis-automoviles/actualizar/{{ automovil.id }}" method="post"> 
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Submit">
@@ -11,6 +11,6 @@
 
 <h2 style="color:green">{{msg_exito}}</h2>
 
-<a href="/panel-automovil" >Volver a la lista de automoviles</a>
+<a href="/mis-automoviles" >Volver a la lista de automoviles</a>
 
 {% endblock %}
