--- a/ejemplo/templates/ejemplo/automovil_list.html
+++ b/ejemplo/templates/ejemplo/automovil_list.html
@@ -11,7 +11,7 @@
 
 {% block buscar %} {% endblock %}
 
-{% for familiar in object_list %}
+{% for automovil in object_list %}
     <li>{{automovil}}</li>
 {% endfor %}    
 </ul>
