--- a/ejemplo/templates/ejemplo/mascota_list.html
+++ b/ejemplo/templates/ejemplo/mascota_list.html
@@ -11,7 +11,7 @@
 
 {% block buscar %} {% endblock %}
 
-{% for familiar in object_list %}
+{% for mascota in object_list %}
     <li>{{mascota}}</li>
 {% endfor %}    
 </ul>
