--- a/ejemplo/templates/ejemplo/mascotas.html
+++ b/ejemplo/templates/ejemplo/mascotas.html
@@ -1,16 +1,16 @@
-{% extends 'ejemplo/base.html' %}
+{% extends 'ejemplo/base_mascotas.html' %}
 
 {% block titulo %}
 Lista de Mascotas
 {%endblock %}
 {% block contenido %}
-     <a href="/macotas/alta">Nueva mascota</a>
+     <a href="/mis-mascotas/alta">Nueva mascota</a>
     <ul>
 {% for mascota in lista_mascota %} 
         <li>
             Id: {{mascota.id}}--Nombre: {{mascota.nombre}}--Animal: {{mascota.animal}}--Edad: {{mascota.edad}}--Fecha adopcion: {{mascota.fecha_adopcion}}
-            <a href='/mascotas/actualizar/{{ mascota.id }}'>Actualizar</a>
-            <a href='/mascotas/borrar/{{ mascota.id }}'>Borrar</a>
+            <a href='/mis-mascotas/actualizar/{{ mascota.id }}'>Actualizar</a>
+            <a href='/mis-mascotas/borrar/{{ mascota.id }}'>Borrar</a>
     </li>
     {% endfor %}
     </ul> 
