--- a/ejemplo_dos/templates/ejemplo_dos/base.html
+++ b/ejemplo_dos/templates/ejemplo_dos/base.html
@@ -24,6 +24,13 @@
                         <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
+                        
+                        <li class="nav-item"><a class="nav-link" href="{% url "ejemplo-dos-signup" %}">Registrarse</a></li>
+                        {% if user.is_authenticated %}
+                            <li class="nav-item"><a class="nav-link" href="{% url "ejemplo-dos-logout" %}">Salir</a></li>
+                        {% else %}
+                            <li class="nav-item"><a class="nav-link" href="{% url "ejemplo-dos-login" %}">Ingresar</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
