--- a/ejemplo_dos/templates/ejemplo_dos/index.html
+++ b/ejemplo_dos/templates/ejemplo_dos/index.html
@@ -5,6 +5,89 @@
     <div class="row">
         <!-- Blog entries-->
         <div class="col-lg-8">
+            {% if posts %}
+                <!-- Featured blog post-->
+                <div class="card mb-4">
+                    {% if posts.0 %}
+                    <a href="#!"><img class="card-img-top" src="{{posts.0.imagen.url}}" alt="..." /></a>
+                    <div class="card-body">
+                        <div class="small text-muted">{{posts.0.publicado_el}}</div>
+                        <h2 class="card-title">{{posts.0.titulo}}</h2>
+                        <p class="card-text">{{posts.0.sub_titulo}}</p>
+                        <a class="btn btn-primary" href="{% url 'ejemplo-dos-detalle' posts.0.id %}">Leer Mas →</a>
+                    </div>
+                    {% endif %}
+                </div>
+                <!-- Nested row for non-featured blog posts-->
+                <div class="row">
+                    <div class="col-lg-6">
+                        <!-- Blog post-->
+                        <div class="card mb-4">
+                            {% if posts.1 %}
+                            <a href="#!"><img class="card-img-top" src="{{posts.1.imagen.url}}" alt="..." /></a>
+                            <div class="card-body">
+                                <div class="small text-muted">{{posts.1.publicado_el}}</div>
+                                <h2 class="card-title">{{posts.1.titulo}}</h2>
+                                <p class="card-text">{{posts.1.sub_titulo}}</p>
+                                <a class="btn btn-primary" href="{% url 'ejemplo-dos-detalle' posts.1.id %}">Leer Mas →</a>
+                            </div>
+                            {% endif %}
+                        </div>
+                        <!-- Blog post-->
+                        <div class="card mb-4">
+                            {% if posts.2 %}
+                            <a href="#!"><img class="card-img-top" src="{{posts.3.imagen.url}}" alt="..." /></a>
+                            <div class="card-body">
+                                <div class="small text-muted">{{posts.2.publicado_el}}</div>
+                                <h2 class="card-title">{{posts.2.titulo}}</h2>
+                                <p class="card-text">{{posts.2.sub_titulo}}</p>
+                                <a class="btn btn-primary" href="{% url 'ejemplo-dos-detalle' posts.2.id %}">Leer Mas →</a>
+                            </div>
+                            {% endif %}
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <!-- Blog post-->
+                        <div class="card mb-4">
+                            {% if post.3 %}
+                            <a href="#!"><img class="card-img-top" src="{{posts.4.imagen.url}}" alt="..." /></a>
+                            <div class="card-body">
+                                <div class="small text-muted">{{posts.3.publicado_el}}</div>
+                                <h2 class="card-title">{{posts.3.titulo}}</h2>
+                                <p class="card-text">{{posts.3.sub_titulo}}</p>
+                                <a class="btn btn-primary" href="{% url 'ejemplo-dos-detalle' posts.3.id %}">Leer Mas →</a>
+                            </div>
+                            {% endif %}
+                        </div>
+                        <!-- Blog post-->
+                        <div class="card mb-4">
+                            {% if posts.4 %}
+                            <a href="#!"><img class="card-img-top" src="{{posts.5.imagen.url}}" alt="..." /></a>
+                            <div class="card-body">
+                                <div class="small text-muted">{{posts.4.publicado_el}}</div>
+                                <h2 class="card-title">{{posts.4.titulo}}</h2>
+                                <p class="card-text">{{posts.4.sub_titulo}}</p>
+                                <a class="btn btn-primary" href="{% url 'ejemplo-dos-detalle' posts.4.id %}">Leer Mas →</a>
+                            </div>
+                            {% endif %}
+                        </div>
+                        <div class="card mb-4">
+                            {% if posts.5 %}
+                            <a href="#!"><img class="card-img-top" src="{{posts.6.imagen.url}}"  alt="..." /></a>
+                            <div class="card-body">
+                                <div class="small text-muted">{{posts.5.publicado_el}}</div>
+                                <h2 class="card-title">{{posts.5.titulo}}</h2>
+                                <p class="card-text">{{posts.5.sub_titulo}}</p>
+                                <a class="btn btn-primary" href="{% url 'ejemplo-dos-detalle' posts.5.id %}">Leer Mas →</a>
+                            </div>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            {% else %}
+                <h1>No hay posts</h1>
+            {% endif %}
+            </div>
             <!-- Featured blog post-->
             <div class="card mb-4">
                 <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
