--- a/ejemplo_dos/templates/ejemplo_dos/post_list.html
+++ b/ejemplo_dos/templates/ejemplo_dos/post_list.html
@@ -1,9 +1,15 @@
 {% extends 'ejemplo_dos/base.html' %}
 
 {% block contenido %}
+<a href = "{% url "ejemplo-dos-crear" %}" > Crear Post</a>
 <ul>
 {% for post in object_list %}
-    <li>{{post.titulo}}</li>
+    <li> 
+        {{post.publicado_el}} -- {{post.titulo}} 
+            <a href="{% url 'ejemplo-dos-borrar' post.id %}">Borrar</a>
+            <a href="{% url 'ejemplo-dos-actualizar' post.id %}">Actualizar</a>
+            <a href="{% url 'ejemplo-dos-detalle' post.id %}">Ver</a>
+    </li>
 {% endfor %}
 </ul>
-{%endblock%}
+{% endblock %}
