--- a/ejemplo_dos/templates/ejemplo_dos/post_form.html
+++ b/ejemplo_dos/templates/ejemplo_dos/post_form.html
@@ -1,7 +1,7 @@
 {%extends "ejemplo_dos/base.html" %}
 
 {% block contenido %}
-<form method="POST">
+<from enctype="multipart/form-data" <form method="POST">
     {% csrf_token %}
     {{form.as_p}}
     <input type="submit" value= "Postear">
