Final ultima clase

--- a/ejemplo_dos/templates/ejemplo_dos/post_list.html
+++ b/ejemplo_dos/templates/ejemplo_dos/post_list.html
@@ -4,6 +4,7 @@
 <a href = "{% url "ejemplo-dos-crear" %}" > Crear Post</a>
 <a href = "{% url "ejemplo-dos-avatars-actualizar" user.id %}" >Actualizar Avatar</a>
 <a href = "{% url "ejemplo-dos-users-actualizar" user.id %}" >Actualizar Profile</a>
+<a href = "{% url "ejemplo-dos-mensajes-listar" user.id %}" >Mensajes</a>
 <ul>
 {% for post in object_list %}
     <li> 
