--- a/ejemplo_dos/templates/ejemplo_dos/base.html
+++ b/ejemplo_dos/templates/ejemplo_dos/base.html
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url "ejemplo-dos-mensajes-crear" %}">Contact</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url "ejemplo-dos-signup" %}">Registrarse</a></li> 
                         <li class="nav-item"><a class="nav-link" href="{% url "ejemplo-dos-login" %}">Ingresar</a></li>
