--- a/ejemplo_dos/templates/ejemplo_dos/post_form.html
+++ b/ejemplo_dos/templates/ejemplo_dos/post_form.html
@@ -1,8 +1,8 @@
-{%extends "ejemplo_dos/base.html" %}
+{% extends 'ejemplo_dos/base.html' %}
 {% block contenido %}
-<from enctype="multipart/form-data" <form method="POST">
+<form enctype="multipart/form-data" method="POST">
     {% csrf_token %}
     {{form.as_p}}
-    <input type="submit" value= "Postear">
+    <input type="submit" value="Postear">
 </form>
 {% endblock %}
