--- a/ejemplo_dos/templates/ejemplo_dos/post_list.html
+++ b/ejemplo_dos/templates/ejemplo_dos/post_list.html
@@ -10,9 +10,11 @@
 <ul>
 {% for post in object_list %}
     <li>
-        {{post.publicado_el}} - - {{post.titulo}} 
+        {{post.publicado_el}} - - {{post.titulo}}
+        {% if user.is_authenticated %} 
             <a href="{% url 'ejemplo-dos-borrar' post.id %}">Borrar</a>
             <a href="{% url 'ejemplo-dos-actualizar' post.id %}">Actualizar</a>
+        {% endif %}   
             <a href="{% url 'ejemplo-dos-detalle' post.id %}">Ver</a>
     </li>
 {% endfor %}
