--- a/ejemplo_dos/templates/ejemplo_dos/mensaje_list.html
+++ b/ejemplo_dos/templates/ejemplo_dos/mensaje_list.html
@@ -5,7 +5,7 @@
 {% for mensaje in object_list %}
     <li>
         {{mensaje.enviado_el}} -- {{mensaje.email}} -- {{mensaje.nombre}} 
-        <a href="{% url 'ejemplo-dos-mensajes-detalle' %}">Ver</a>   #mensaje.id#
+        <a href="{% url 'ejemplo-dos-mensajes-detalle' %}">Ver</a> 
     </li>
 {% endfor %}
 </ul>
