--- a/ejemplo_dos/templates/ejemplo_dos/post_list.html
+++ b/ejemplo_dos/templates/ejemplo_dos/post_list.html
@@ -4,7 +4,7 @@
 {% if user.is_authenticated %}
     <a href="{% url 'ejemplo-dos-crear' %}">Crear Post</a>
     {% if user.avatar.imagen %}
-        <a href="{% url 'ejemplo-dos-avatars-actualizar' user.id %}">Actualizar Avatar</a>
+        <a href="{% url 'ejemplo-dos-avatars-actualizar' user.avatar.id %}">Actualizar Avatar</a>
     {% endif %}
     <a href="{% url 'ejemplo-dos-users-actualizar' user.id %}">Actualizar User</a>
     <a href="{% url 'ejemplo-dos-mensajes-listar' %}">Ver Mensajes</a>
