--- a/Entrega_Final_FRO/templates/Entrega_Final_Federico_Rodriguez_Ovejero/index.html
+++ b/Entrega_Final_FRO/templates/Entrega_Final_Federico_Rodriguez_Ovejero/index.html
@@ -1,4 +1,4 @@
-{%extends "ejemplo_dos/base.html"%}
+{%extends "Entrega_Final_FRO/base.html"%}
 
 {% block contenido%} 
 <div class="container">
@@ -14,7 +14,7 @@
                         <div class="small text-muted">{{posts.0.publicado_el}}</div>
                         <h2 class="card-title">{{posts.0.titulo}}</h2>
                         <p class="card-text">{{posts.0.sub_titulo}}</p>
-                        <a class="btn btn-primary" href="{% url 'ejemplo-dos-detalle' posts.0.id %}">Leer Mas →</a>
+                        <a class="btn btn-primary" href="{% url 'Entrega_Final_FRO-detalle' posts.0.id %}">Leer Mas →</a>
                     </div>
                     {% endif %}
                 </div>
@@ -29,7 +29,7 @@
                                 <div class="small text-muted">{{posts.1.publicado_el}}</div>
                                 <h2 class="card-title">{{posts.1.titulo}}</h2>
                                 <p class="card-text">{{posts.1.sub_titulo}}</p>
-                                <a class="btn btn-primary" href="{% url 'ejemplo-dos-detalle' posts.1.id %}">Leer Mas →</a>
+                                <a class="btn btn-primary" href="{% url 'Entrega_Final_FRO-detalle' posts.1.id %}">Leer Mas →</a>
                             </div>
                             {% endif %}
                         </div>
@@ -41,7 +41,7 @@
                                 <div class="small text-muted">{{posts.2.publicado_el}}</div>
                                 <h2 class="card-title">{{posts.2.titulo}}</h2>
                                 <p class="card-text">{{posts.2.sub_titulo}}</p>
-                                <a class="btn btn-primary" href="{% url 'ejemplo-dos-detalle' posts.2.id %}">Leer Mas →</a>
+                                <a class="btn btn-primary" href="{% url 'Entrega_Final_FRO-detalle' posts.2.id %}">Leer Mas →</a>
                             </div>
                             {% endif %}
                         </div>
@@ -55,7 +55,7 @@
                                 <div class="small text-muted">{{posts.3.publicado_el}}</div>
                                 <h2 class="card-title">{{posts.3.titulo}}</h2>
                                 <p class="card-text">{{posts.3.sub_titulo}}</p>
-                                <a class="btn btn-primary" href="{% url 'ejemplo-dos-detalle' posts.3.id %}">Leer Mas →</a>
+                                <a class="btn btn-primary" href="{% url 'Entrega_Final_FRO-detalle' posts.3.id %}">Leer Mas →</a>
                             </div>
                             {% endif %}
                         </div>
@@ -67,7 +67,7 @@
                                 <div class="small text-muted">{{posts.4.publicado_el}}</div>
                                 <h2 class="card-title">{{posts.4.titulo}}</h2>
                                 <p class="card-text">{{posts.4.sub_titulo}}</p>
-                                <a class="btn btn-primary" href="{% url 'ejemplo-dos-detalle' posts.4.id %}">Leer Mas →</a>
+                                <a class="btn btn-primary" href="{% url 'Entrega_Final_FRO-detalle' posts.4.id %}">Leer Mas →</a>
                             </div>
                             {% endif %}
                         </div>
@@ -78,7 +78,7 @@
                                 <div class="small text-muted">{{posts.5.publicado_el}}</div>
                                 <h2 class="card-title">{{posts.5.titulo}}</h2>
                                 <p class="card-text">{{posts.5.sub_titulo}}</p>
-                                <a class="btn btn-primary" href="{% url 'ejemplo-dos-detalle' posts.5.id %}">Leer Mas →</a>
+                                <a class="btn btn-primary" href="{% url 'Entrega_Final_FRO-detalle' posts.5.id %}">Leer Mas →</a>
                             </div>
                             {% endif %}
                         </div>
