--- a/Entrega_Final_FRO/templates/Entrega_Final_Federico_Rodriguez_Ovejero/mensaje_confirm_delete.html
+++ b/Entrega_Final_FRO/templates/Entrega_Final_Federico_Rodriguez_Ovejero/mensaje_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'ejemplo_dos/base.html' %}
+{% extends 'Entrega_Final_FRO/base.html' %}
 
 {% block contenido %}
 <h1>Esta seguro que quiere borrar el mensaje {{object.titulo}}</h1>
