--- a/Entrega_Final_FRO/templates/Entrega_Final_Federico_Rodriguez_Ovejero/mensaje_detail.html
+++ b/Entrega_Final_FRO/templates/Entrega_Final_Federico_Rodriguez_Ovejero/mensaje_detail.html
@@ -1,4 +1,4 @@
-{% extends 'ejemplo_dos/base.html' %}
+{% extends 'Entrega_Final_FRO/base.html' %}
 
 {% block contenido %}
     <div>
@@ -18,5 +18,5 @@
         Enviado el: {{object.enviado_el}}
     </div>
     <br>
-    <a href="{% url 'ejemplo-dos-mensajes-listar' %}">Lista de Mensajes</a>
+    <a href="{% url 'Entrega_Final_FRO-mensajes-listar' %}">Lista de Mensajes</a>
 {% endblock %}
