--- a/Entrega_Final_FRO/templates/Entrega_Final_Federico_Rodriguez_Ovejero/mensaje_list.html
+++ b/Entrega_Final_FRO/templates/Entrega_Final_Federico_Rodriguez_Ovejero/mensaje_list.html
@@ -1,11 +1,11 @@
-{% extends 'ejemplo_dos/base.html' %}
+{% extends 'Entrega_Final_FRO/base.html' %}
 
 {% block contenido %}
 <ul>
 {% for mensaje in object_list %}
     <li>
         {{mensaje.enviado_el}} -- {{mensaje.email}} -- {{mensaje.nombre}} 
-        <a href="{% url "ejemplo-dos-mensajes-detalle" mensaje.id %}">Ver</a> 
+        <a href="{% url "Entrega_Final_FRO-mensajes-detalle" mensaje.id %}">Ver</a> 
     </li>
 {% endfor %}
 </ul>
