--- a/Entrega_Final_FRO/templates/auth/user_form.html
+++ b/Entrega_Final_FRO/templates/auth/user_form.html
@@ -1,4 +1,4 @@
-{% extends "ejemplo_dos/base.html" %}
+{% extends "Entrega_Final_FRO/base.html" %}
 {%block contenido %}
 <form method="POST">
     {% csrf_token %}
