--- a/Entrega_Final_FRO/templates/registration/signup.html
+++ b/Entrega_Final_FRO/templates/registration/signup.html
@@ -1,4 +1,4 @@
-{%extends "ejemplo_dos/base.html" %}
+{%extends "Entrega_Final_FRO/base.html" %}
 
 {% block contenido %}
     <h2> Registrar Usuario</h2>
