--- a/Entrega_Final_FRO/templates/Entrega_Final_Federico_Rodriguez_Ovejero/base.html
+++ b/Entrega_Final_FRO/templates/Entrega_Final_Federico_Rodriguez_Ovejero/base.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">Nosotros</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url "Entrega_Final_FRO-mensajes-crear" %}">Contact</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url "Entrega_Final_FRO-signup" %}">Registrarse</a></li> 
