Ejemplo dos rename

--- a/ejemplo_dos/templates/ejemplo_dos/post_confirm_delete.html
+++ b/ejemplo_dos/templates/ejemplo_dos/post_confirm_delete.html
@@ -11,7 +11,7 @@
     <form method="post">
         {% csrf_token %}
         "¿ Estás seguro de borrar el post {{ object }} ?"
-        <a href="/Entrega_Final_FRO"><input type="button" value="No" class="btn btn-primary" /></a>
+        <a href="/ejemplo-dos"><input type="button" value="No" class="btn btn-primary" /></a>
         <input type="submit" value="Si">
     </form>
 
