--- a/ejemplo_dos/templates/ejemplo_dos/avatar_form.html
+++ b/ejemplo_dos/templates/ejemplo_dos/avatar_form.html
@@ -1,4 +1,4 @@
-{%extends "Entrega_Final_FRO/base.html" %}
+{%extends "ejemplo_dos/base.html" %}
 {% block contenido %}
 <form enctype="multipart/form-data" form method="POST">
     {% csrf_token %}
