--- a/ejemplo_dos/templates/ejemplo_dos/base.html
+++ b/ejemplo_dos/templates/ejemplo_dos/base.html
@@ -10,13 +10,13 @@
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{% static "Entrega-Final-FRO/css/styles.css" %}" rel="stylesheet" />
+        <link href="{% static "ejemplo_dos/css/styles.css" %}" rel="stylesheet" />
     </head>
     <body>
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">   
-                <a class="navbar-brand" href="{% url 'Entrega-Final-FRO-index' %}">
+                <a class="navbar-brand" href="{% url 'ejemplo-dos-index' %}">
                     <img src="{{user.avatar.imagen.url}}" height="64">
                     {% if user.is_authenticated%}
                     Hola, {{user.first_name}}
@@ -28,14 +28,14 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url "Entrega-Final-FRO-mensajes-crear" %}">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url "ejemplo-dos-mensajes-crear" %}">Contact</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url "Entrega-Final-FRO-signup" %}">Registrarse</a></li> 
+                        <li class="nav-item"><a class="nav-link" href="{% url "ejemplo-dos-signup" %}">Registrarse</a></li> 
                         {%if user.is_authenticated %}
-                            <li class="nav-item"><a class="nav-link" href="{% url "Entrega-Final-FRO-listar" %}">Admin Blog</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{% url "Entrega-Final-FRO-logout" %}">Salir</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url "ejemplo-dos-listar" %}">Admin Blog</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url "ejemplo-dos-logout" %}">Salir</a></li>
                         {% else %} 
-                            <li class="nav-item"><a class="nav-link" href="{% url "Entrega-Final-FRO-login" %}">Ingresar</a></li> 
+                            <li class="nav-item"><a class="nav-link" href="{% url "ejemplo-dos-login" %}">Ingresar</a></li> 
                         {% endif %}    
                     </ul>
                 </div>
