--- a/ejemplo_dos/templates/ejemplo_dos/mensaje_confirm_delete.html
+++ b/ejemplo_dos/templates/ejemplo_dos/mensaje_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'Entrega_Final_FRO/base.html' %}
+{% extends 'ejemplo_dos/base.html' %}
 
 {% block contenido %}
 <h1>Esta seguro que quiere borrar el mensaje {{object.titulo}}</h1>
