--- a/ejemplo_dos/templates/ejemplo_dos/mensaje_detail.html
+++ b/ejemplo_dos/templates/ejemplo_dos/mensaje_detail.html
@@ -1,4 +1,4 @@
-{% extends 'Entrega_Final_FRO/base.html' %}
+{% extends 'ejemplo_dos/base.html' %}
 
 {% block contenido %}
     <div>
@@ -18,5 +18,5 @@
         Enviado el: {{object.enviado_el}}
     </div>
     <br>
-    <a href="{% url 'Entrega-Final-FRO-mensajes-listar' %}">Lista de Mensajes</a>
+    <a href="{% url 'ejemplo-dos-mensajes-listar' %}">Lista de Mensajes</a>
 {% endblock %}
