--- a/ejemplo_dos/templates/ejemplo_dos/mensaje_list.html
+++ b/ejemplo_dos/templates/ejemplo_dos/mensaje_list.html
@@ -1,11 +1,11 @@
-{% extends 'Entrega_Final_FRO/base.html' %}
+{% extends 'ejemplo_dos/base.html' %}
 
 {% block contenido %}
 <ul>
 {% for mensaje in object_list %}
     <li>
         {{mensaje.enviado_el}} -- {{mensaje.email}} -- {{mensaje.nombre}} 
-        <a href="{% url "Entrega-Final-FRO-mensajes-detalle" mensaje.id %}">Ver</a> 
+        <a href="{% url "ejemplo-dos-mensajes-detalle" mensaje.id %}">Ver</a> 
     </li>
 {% endfor %}
 </ul>
