--- a/ejemplo_dos/templates/registration/login.html
+++ b/ejemplo_dos/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends "Entrega_Final_FRO/base.html" %}
+{% extends "ejemplo_dos/base.html" %}
 
 {%block contenido %}
     <form method="POST">
