--- a/ejemplo_dos/templates/registration/signup.html
+++ b/ejemplo_dos/templates/registration/signup.html
@@ -1,4 +1,4 @@
-{%extends "Entrega_Final_FRO/base.html" %}
+{%extends "ejemplo_dos/base.html" %}
 
 {% block contenido %}
     <h2> Registrar Usuario</h2>
